added tlx command line parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,29 @@ project (lceTest)
   
 set(CMAKE_CXX_FLAGS " -Wall -std=c++17 -O3")
 
-#LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/res)
-#set(CMAKE_CXX_FLAGS "-O0 -ggdb") 
+# include ferrada's rmq implementation
+add_library(ferrada_rmq libs/rmq/RMQRMM64.cpp libs/rmq/includes/Basic_rmq.cpp)
+
+target_include_directories(ferrada_rmq PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs>
+  $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs>
+)
+
+
+# include command line parser from tlx
+add_library(tlx_command_line
+  libs/tlx/tlx/cmdline_parser.cpp
+  libs/tlx/tlx/string/parse_si_iec_units.cpp)
+
+target_include_directories(tlx_command_line PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/tlx/>
+  $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/tlx/>
+)
+
+
 add_executable(bench_time ./src/bench_time.cpp)
-#add_library(bench_time ./src/bench_time.cpp)
-target_link_libraries (bench_time ${CMAKE_SOURCE_DIR}/libs/rmqrmmBP.a)
+target_link_libraries(bench_time ferrada_rmq)
+target_link_libraries(bench_time tlx_command_line)
 
 #add_executable(testCorrectness ./src/test_correctness.cpp)
 
