WIP: automatic lce ranges

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,6 @@ target_include_directories(ferrada_rmq PUBLIC
   $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs>
 )
 
-
 # include command line parser from tlx
 add_library(tlx_command_line
   libs/tlx/tlx/cmdline_parser.cpp
@@ -25,10 +24,33 @@ target_include_directories(tlx_command_line PUBLIC
   $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/tlx/>
 )
 
+# include malloc_count
+add_library(malloc_count
+  libs/malloc_count/malloc_count.c
+  libs/malloc_count/stack_count.c
+)
+  
+target_include_directories(malloc_count PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/malloc_count/>
+  $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/malloc_count/>
+)
+
+# include reworked version of sais_lite
+add_library(sais_lcp
+  libs/sais-lite-lcp/sais.c
+)
+target_include_directories(sais_lcp PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/sais-lite-lcp/>
+  $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/sais-lite-lcp/>
+)
+  
 
 add_executable(bench_time ./src/bench_time.cpp)
 target_link_libraries(bench_time ferrada_rmq)
 target_link_libraries(bench_time tlx_command_line)
+target_link_libraries(bench_time sais_lcp)
 
-#add_executable(testCorrectness ./src/test_correctness.cpp)
 
+add_executable(bench_memory ./src/bench_memory.cpp)
+target_link_libraries(bench_memory ferrada_rmq)
+target_link_libraries(bench_memory malloc_count -ldl)
