--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "libs/stash"]
 	path = libs/stash
 	url = https://github.com/pdinklag/stash/
+[submodule "libs/malloc_count"]
+	path = libs/malloc_count
+	url = https://github.com/bingmann/malloc_count
+[submodule "libs/sais-lite-lcp"]
+	path = libs/sais-lite-lcp
+	url = https://github.com/kurpicz/sais-lite-lcp
