added succ data structure

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(bench_time
 target_include_directories(bench_time PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
   $<INSTALL_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
+  ${PROJECT_SOURCE_DIR}/extlib/stash/include
 )
 
 target_link_libraries(bench_time ferrada_rmq tlx stdc++fs sais_lcp)
