Add malloc count and fix sorted LCE queries

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -26,7 +26,8 @@ target_include_directories(bench_time PUBLIC
   $<INSTALL_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
 )
 
-target_link_libraries(bench_time ferrada_rmq tlx stdc++fs sais_lcp)
+target_link_libraries(bench_time
+  ferrada_rmq tlx stdc++fs sais_lcp malloc_count -ldl)
 
 # add_executable(bench_memory ./src/bench_memory.cpp)
 # target_link_libraries(bench_memory ferrada_rmq tlx_command_line sais_lcp)
