Add better SDSL LCE tests

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -21,15 +21,16 @@ target_include_directories(malloc_count PUBLIC
 add_executable(bench_time
   bench_time.cpp)
 
+find_package(SDSL REQUIRED)
+find_package(divsufsort REQUIRED)
+find_package(divsufsort64 REQUIRED)
+
 target_include_directories(bench_time PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
   $<INSTALL_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
   ${PROJECT_SOURCE_DIR}/extlib/stash/include
+  ${SDSL_INCLUDE_DIRS}
 )
-
-find_package(SDSL REQUIRED)
-find_package(divsufsort REQUIRED)
-find_package(divsufsort64 REQUIRED)
 
 target_link_libraries(bench_time
   ferrada_rmq tlx stdc++fs sais_lcp ${SDSL} ${divsufsort} ${divsufsort64} malloc_count -ldl)
