--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "extlib/libsais"]
 	path = extlib/libsais
 	url = git@github.com:IlyaGrebnov/libsais.git
+[submodule "extlib/ips4o"]
+	path = extlib/ips4o
+	url = https://github.com/ips4o/ips4o
