finalize shared memory lce data structure based on string synchronizing set with run-detection

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "extlib/ips4o"]
 	path = extlib/ips4o
 	url = https://github.com/ips4o/ips4o
+[submodule "extlib/parallel-hashmap"]
+	path = extlib/parallel-hashmap
+	url = https://github.com/greg7mdp/parallel-hashmap
