--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(divsufsort64 REQUIRED)
 target_include_directories(bench_time PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
   $<INSTALL_INTERFACE:${PROJECT_SOURCE_DIR}/lce-test/>
+  #/work/smarherl/oneapi-tbb-2021.3.0/include
   #${SDSL_INCLUDE_DIRS}
   #${PROJECT_SOURCE_DIR}/extlib/ips4o/include
 )
@@ -45,7 +46,8 @@ target_include_directories(bench_time SYSTEM PRIVATE
 )
 
 target_link_libraries(bench_time PRIVATE
-  ferrada_rmq tlx stdc++fs sais_lcp libsais ${SDSL} ${divsufsort} ${divsufsort64} malloc_count -ldl -fopenmp PRIVATE)
+  ferrada_rmq tlx sais_lcp libsais ${SDSL} ${divsufsort} ${divsufsort64} malloc_count -ldl -fopenmp PRIVATE TBB::tbb)
+
 
 option(LCE_BUILD_SDSL
   "Build the minimal benchmark based on the SDSL which uses CSTs to compute LCEs" OFF)
@@ -82,7 +84,7 @@ target_include_directories(bench_sparse_ss PUBLIC
 )
 
 
-target_link_libraries(bench_sparse_ss tlx malloc_count -ldl libsais)
+target_link_libraries(bench_sparse_ss PRIVATE tlx malloc_count -ldl libsais TBB::tbb)
 
 
 
